Removed Obsolete files

--- a/Client/src/css/App.css
+++ b/Client/src/css/App.css
@@ -20,149 +20,8 @@ hr {
   font-size: 20px !important;
 }
 
-.fitnessLevel,
-.calculate_1_RepMax {
-  list-style-type: none;
-}
-
-.videoPlayer {
-  margin-top: 10px;
-  width: 640px;
-  max-width: 100%;
-  margin-bottom: 165px;
-}
-
-.videoPlayer > button {
-  background-color: #393f4d;
-  margin-right: 5px;
-  margin-top: 5px;
-  width: 147px;
-  max-width: 100%;
-  height: 35px;
-  max-height: 100%;
-  font-size: 14px;
-}
-
-.tablePlacement {
-  margin-top: 0px;
-}
-
-.oneRep {
-  display: inline-block;
-  margin-right: 15px;
-  padding-left: 10px;
-  margin-top: 15px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  box-sizing: border-box;
-  background-color: gainsboro;
-}
-.oneRep > h6 {
-  font-weight: bold;
-  width: 135px;
-  margin-right: 10px;
-  text-align: center;
-}
-
-.oneRep > label {
-  display: block;
-  width: 135px;
-  margin-right: 10px;
-  text-align: center;
-}
-
-.oneRep > label > input {
-  width: 135px;
-  height: 40px;
-  border-radius: 4px;
-  text-align: center;
-}
-
-.programTable {
-  background-color: #ffffff;
-}
-
-table {
-  border-collapse: collapse;
-  overflow-x: auto;
-  display: block;
-  width: fit-content;
-  max-width: 100%;
-  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
-  border-radius: 7px;
-  border-style: hidden;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-}
-
-th,
-tr {
-  height: 60px;
-  text-indent: 25px;
-  padding: 0.5rem;
-}
-
-th {
-  text-align: left;
-  background-color: #007bff;
-  text-transform: uppercase;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  border-top: none;
-}
-
-td {
-  white-space: nowrap;
-  border-bottom: none;
-}
-
-td:first-of-type,
-th:first-of-type {
-  border-left: none;
-}
-
-td:last-of-type,
-th:last-of-type {
-  border-right: none;
-}
-
-tr {
-  border: thin solid rgb(209, 208, 208);
-}
-
-tr:hover {
-  color: #ffffff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #006dcc;
-  *background-color: #0044cc;
-  background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -webkit-gradient(
-    linear,
-    0 0,
-    0 100%,
-    from(#0088cc),
-    to(#0044cc)
-  );
-  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -o-linear-gradient(top, #0088cc, #0044cc);
-  background-image: linear-gradient(to bottom, #0088cc, #0044cc);
-  background-repeat: repeat-x;
-  border-color: #0044cc #0044cc #002a80;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', 
-      endColorstr='#ff0044cc', GradientType=0);
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-}
-
-.gymImage > img {
+.crownImage > img {
   width: 1280px;
-  max-width: 100%;
-}
-
-.foodImage > img {
-  width: 640px;
   max-width: 100%;
 }
 
