--- a/Client/src/containers/chat/Chat.css
+++ b/Client/src/containers/chat/Chat.css
@@ -8,6 +8,8 @@ body {
   font: 13px Helvetica, Arial;
 }
 
+/**********This CSS is breaking the modals!!!
+***********It is too generic and affect global forms in the app
 form {
   background: #000;
   padding: 3px;
@@ -15,7 +17,7 @@ form {
   bottom: 0;
   width: 100%;
 }
-
+*/
 form input {
   border: 0;
   padding: 10px;
